# LLM-AI

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  auto_train.sh  checkpoint.py  download_additional_data.py  download_fineweb_edu.py  download_wiki.py  gpt2.py  inference.py  prepare_data.py  prepare_extra_data.py  pyproject.toml  run_prepare.sh  test_generate.py  test_model.py  train.py
